--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Cupra</string>
-    <string name="facebook_app_id">418598689595739</string>
+    <string name="facebook_app_id">591252778700926</string>
+<string name="fb_login_protocol_scheme">fb591252778700926</string>
 
 </resources>
